worker数を変更可能

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,7 @@ vp1:
     - CORE_PEER_PKI_ECA_PADDR=membersrvc:7054
     - CORE_PEER_PKI_TCA_PADDR=membersrvc:7054
     - CORE_PEER_PKI_TLSCA_PADDR=membersrvc:7054
-    #- CORE_PEER_DISCOVERY_ROOTNODE=54.187.88.181:7051
+    - CORE_PEER_DISCOVERY_ROOTNODE=54.203.5.102:7051
     #- CORE_PEER_VALIDATOR_CONSENSUS_PLUGIN=pbft
   links:
     - membersrvc
