--- a/docker/vp/docker-compose.yml
+++ b/docker/vp/docker-compose.yml
@@ -1,17 +1,35 @@
-vp1:
+vp4:
   image: hyperledger/fabric-peer
   ports:
     - "7050:7050"
     - "7051:7051"
+    - "7052:7052"
     - "7053:7053"
+    - "7050:7050/udp"
+    - "7051:7051/udp"
+    - "7052:7052/udp"
+    - "7053:7053/udp"
+  hostname: vp4
   environment:
-    - CORE_PEER_ID=vp1
+    - CORE_PEER_ID=vp4
     - CORE_PEER_ADDRESSAUTODETECT=true
+    - CORE_PEER_NETWORKID=dev
     - CORE_VM_ENDPOINT==unix:///var/run/docker.sock
-    - CORE_LOGGING_LEVEL=DEBUG
-    - CORE_PEER_PKI_ECA_PADDR=0.0.0.0:7054
-    - CORE_PEER_PKI_TCA_PADDR=0.0.0.0:7054
-    - CORE_PEER_PKI_TLSCA_PADDR=0.0.0.0:7054
-    #- CORE_PEER_DISCOVERY_ROOTNODE=54.187.88.181:7051
-    #- CORE_PEER_VALIDATOR_CONSENSUS_PLUGIN=pbft
-  command: sh -c "peer node start --peer-chaincodedev"
+    - CORE_LOGGING_LEVEL=INFO
+    - CORE_PEER_PKI_ECA_PADDR=54.249.54.193:7054
+    - CORE_PEER_PKI_TCA_PADDR=54.249.54.193:7054
+    - CORE_PEER_PKI_TLSCA_PADDR=54.249.54.193:7054
+    - CORE_PEER_DISCOVERY_ROOTNODE=54.202.245.216:7051,54.93.90.83:7051,54.145.212.96:7051,54.250.153.41:7051,54.201.64.214:7051,52.59.249.107:7051,54.91.12.124:7051,54.238.196.201:7051
+    - CORE_PEER_VALIDATOR_CONSENSUS_PLUGIN=pbft
+    - CORE_PBFT_GENERAL_MODE=batch
+    - CORE_PBFT_GENERAL_N=8
+    - CORE_PBFT_GENERAL_K=2
+    - CORE_PBFT_GENERAL_BATCHSIZE=2
+    - CORE_PBFT_GENERAL_TIMEOUT_REQUEST=2s
+    - CORE_PBFT_GENERAL_TIMEOUT_VIEWCHANGE=2s
+    - CORE_SECURITY_ENABLED=true
+    - CORE_SECURITY_ENROLLID=test_vp4
+    - CORE_SECURITY_ENROLLSECRET=Pqh90CEW5juZ
+  volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  command: peer node start --peer-chaincodedev
